[package]
name = "rtzx"
version = "0.4.0"
authors = ["Phil Stewart"]
edition = "2024"
description = "TZX / CDT tape file parsing and conversion / playback"
readme = "README.md"
repository = "https://github.com/LichP/rtzx"
license = "MIT"
keywords = ["tzx", "cdt", "spectrum", "amstrad", "cpc"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
binrw = "0.15.0"
bitvec = "1.0.1"
bon = "3.8.1"
clap = { version = "4.5.48", features = ["derive"] }
cpal = "0.16.0"
crc = "3.4.0"
crossterm = "0.29.0"
figlet-rs = "0.1.5"
hound = "3.5.1"
popcnt = "0.1.0"
ratatui = "0.29.0"
rodio = { version = "0.21.1", default-features = false, features = ["playback"] }
strum = "0.27.2"
strum_macros = "0.27.2"
